# clang-cl-poc

./: CMakeLists.txt  CMakeSettings.json
cmake/: CMakeLists.txt  cmake.cpp  cmake.h
